fix(FES-QES Table): Attempt to fix wordwrap on mobile

--- a/src/css/imports/table-dense.scss
+++ b/src/css/imports/table-dense.scss
@@ -85,6 +85,7 @@
         ul {
           padding: 0px;
           margin: 0px;
+          white-space: normal;
     
           li:before {
             content: "•";
